SchemaPolicyとDocumentのapi.ts関数の実装ポリシー合わせ #524
